package services

import (
	"context"
	"log"
)

// MovieService implements the MoviePlatform gRPC service
type EventService struct{}

// CreateMovie implements the CreateMovie RPC
func (s EventService) CreateEvent(ctx context.Context, req *eventpb.EventRequest) (*eventpb.EventResponse, error) {
	// Implementation for creating a movie (add your logic here)
	log.Printf("CreateEven called with movie: %s", req.Event)

	// Dummy response for demonstration
	return &eventpb.EventResponse{
		EventDetails: &eventpb.EventDetails{
			Id:          "123",
			EventName:   req.Event,
			Description: req.Desc,
		},
		Status: eventpb.EventStatus_EVENT_CREATED,
	}, nil
}

// GetMovie implements the GetMovie RPC
func (s EventService) GetEvent(ctx context.Context, req *eventpb.GetEventRequest) (*eventpb.GetEventResponse, error) {
	// Implementation for getting a movie (add your logic here)
	log.Printf("GetMovie called with event: %s", req.Event)

	// Dummy response for demonstration
	return &eventpb.GetEventResponse{
		EventDetails: &eventpb.EventDetails{
			Id:        "123",
			EventName: req.Event,
			// ... (populate other fields accordingly)
		},
	}, nil
}

// GetAllMovies implements the GetAllMovies RPC
func (s EventService) GetAllEvents(ctx context.Context, req *eventpb.GetAllEventsRequest) (*eventpb.GetAllEventsResponse, error) {
	// Implementation for getting all movies (add your logic here)
	log.Printf("GetAllEvents called")

	// Dummy response for demonstration
	return &eventpb.GetAllEventsResponse{
		EventDetails: []*eventpb.EventDetails{
			{
				Id:        "123",
				EventName: "Event 1",
				// ... (populate other fields accordingly)
			},
			{
				Id:        "456",
				EventName: "Event 2",
				// ... (populate other fields accordingly)
			},
		},
	}, nil
}

// UpdateMovie implements the UpdateMovie RPC
func (s EventService) UpdateEvent(ctx context.Context, req *eventpb.UpdateEventRequest) (*eventpb.UpdateEventResponse, error) {
	// Implementation for updating a movie (add your logic here)
	log.Printf("UpdateMovie called with event ID: %s", req.EventId)

	// Dummy response for demonstration
	return &eventpb.UpdateEventResponse{
		EventDetails: &eventpb.EventDetails{
			Id:          req.EventId,
			EventName:   req.Event,
			Description: req.Desc,
		},
		Status: eventpb.EventStatus_EVENT_UPDATED,
	}, nil
}
